--- a/app/src/main/res/layout/fragment_intro_page_0.xml
+++ b/app/src/main/res/layout/fragment_intro_page_0.xml
@@ -11,7 +11,7 @@
         android:layout_width="118dp"
         android:layout_height="163dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:textColor="@color/colorPrimaryDark"
         android:text="Measurelet"
         android:textSize="30sp"
         android:textStyle="bold"
