--- a/app/src/main/res/layout/fragment_intro_page_4.xml
+++ b/app/src/main/res/layout/fragment_intro_page_4.xml
@@ -23,6 +23,7 @@ android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Overblik"
             android:textSize="30sp"
             android:textStyle="bold"
