--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/roundedcorners"
         android:text="Registrer"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
