--- a/app/src/main/res/layout/registration_custom_frag.xml
+++ b/app/src/main/res/layout/registration_custom_frag.xml
@@ -172,7 +172,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="?android:attr/colorBackground"
+        android:background="@color/background_color"
         android:src="@drawable/rippleplusb"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toStartOf="@+id/guideright"
