dividers og andetr lækkert

--- a/app/src/main/res/layout/edit_liquid.xml
+++ b/app/src/main/res/layout/edit_liquid.xml
@@ -266,7 +266,6 @@
             android:id="@+id/timepicker"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/background_color"
             android:timePickerMode="spinner"
             app:layout_constraintBottom_toTopOf="@+id/guideline35"
             app:layout_constraintEnd_toStartOf="@+id/guideright"
@@ -285,8 +284,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/ripple"
-            android:backgroundTint="@color/colorAccent"
+            android:background="@drawable/roundedcorners"
             android:text="Gem"
             android:textSize="14sp"
             android:textStyle="bold"
