--- a/app/src/main/res/layout/weekly_view_frag.xml
+++ b/app/src/main/res/layout/weekly_view_frag.xml
@@ -71,7 +71,9 @@
         <ListView
             android:id="@+id/listWeek"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:divider="#4D0C0C0C"
+            android:dividerHeight="0.5dp"/>
 
 
     </LinearLayout>
