--- a/app/src/main/res/layout/registration_custom_frag.xml
+++ b/app/src/main/res/layout/registration_custom_frag.xml
@@ -164,16 +164,16 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.45" />
 
-    <ImageButton
+    <Button
         android:id="@+id/plusbut"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/background_color"
-        android:src="@drawable/rippleplusb"
+        android:text="Tilføj"
+        android:background="@drawable/roundedcorners"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toStartOf="@+id/guideright"
         app:layout_constraintStart_toStartOf="@+id/guideleft"
