--- a/app/src/main/res/layout/list_daily.xml
+++ b/app/src/main/res/layout/list_daily.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             android:id="@+id/tid_daily"
@@ -18,7 +19,8 @@
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:text="Tid"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/ml_daily"
@@ -27,7 +29,8 @@
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:text="Antal ml"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark" />
 
         <TextView
             android:id="@+id/type_daily"
@@ -38,7 +41,8 @@
             android:paddingTop="10dp"
             android:text="Væsketype"
             android:textAlignment="textStart"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark" />
 
         <ImageButton
             android:id="@+id/imageButton3"
@@ -47,10 +51,7 @@
             android:layout_weight="1"
             android:backgroundTint="@android:color/transparent"
             android:elevation="0dp"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:tint="@color/colorPrimaryDark"
-            app:srcCompat="@android:drawable/ic_menu_edit" />
+            app:srcCompat="@drawable/edit_btn" />
 
     </LinearLayout>
 
