--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.measurelet.MainActivity"
     tools:showIn="@layout/main_app_bar">
