--- a/app/src/main/res/layout/registration_standard_proeve.xml
+++ b/app/src/main/res/layout/registration_standard_proeve.xml
@@ -9,19 +9,20 @@
     android:layout_marginRight="4dp"
     android:layout_marginTop="10dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/colorPrimary"
+    app:cardBackgroundColor="@android:color/transparent"
     app:cardCornerRadius="4dp"
     app:contentPadding="5dp"
-
-    app:cardMaxElevation="1dp"
-    app:cardElevation="1dp"
-
+    app:cardMaxElevation="2dp"
+    app:cardElevation="2dp"
     cardUseCompatPadding="true" >
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingTop="5dp"
         android:orientation="vertical">
 
         <ImageView
