--- a/app/src/main/res/layout/registration_standard_prove2.xml
+++ b/app/src/main/res/layout/registration_standard_prove2.xml
@@ -23,13 +23,13 @@
         android:textAllCaps="false"
         android:textColor="@color/black" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/standrecycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
